Just mucking around with stuff.